OLMIS-1088: Fixed wrong error message in create/authorize requisition view

--- a/src/main/webapp/requisitions/init.html
+++ b/src/main/webapp/requisitions/init.html
@@ -72,5 +72,5 @@
     class="grid grid-init-rnr"
     id="periodGrid">
   </div>
-  <div ng-if="vm.error" class="alert is-error" openlmis-message="error" ng-show="vm.error"></div>
+  <div ng-if="vm.error" class="alert is-error" openlmis-message="vm.error" ng-show="vm.error"></div>
 </div>
