--- a/src/main/webapp/auth/login-form.html
+++ b/src/main/webapp/auth/login-form.html
@@ -36,7 +36,7 @@
       </form>
   </div>
   <div class="powered-by">
-      Powered by <a href="http://openlmis.org" target="_blank">OpenLMIS</a> v@major_version@.@minor_version@.@patch_version@ build @build_version@
+      Powered by <a href="http://openlmis.org" target="_blank">OpenLMIS</a>
   </div>
 </div>
 
