--- a/src/main/webapp/requisitions/requisition/full-supply.html
+++ b/src/main/webapp/requisitions/requisition/full-supply.html
@@ -9,7 +9,7 @@
 			<tr>
 				<td class="productCategory" colspan="{{vm.columns.length}}">{{category}}</td>
 			</tr>
-			<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem)}" ng-repeat="lineItem in lineItems">
+			<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem)}" ng-repeat="lineItem in lineItems | orderBy : 'orderableProduct.name'">
 				<td ng-repeat="column in vm.columns | orderBy : 'displayOrder'" product-grid-cell requisition="vm.requisition" column="column" line-item="lineItem"></td>
 			</tr>
 		</tbody>
