OLMIS-1338: added offline icon to stored requisitions when searching online

--- a/src/main/webapp/requisitions/requisition-search/requisition-search.html
+++ b/src/main/webapp/requisitions/requisition-search/requisition-search.html
@@ -70,7 +70,7 @@
                     <i ng-class="{'icon-ok': requisition.emergency}"></i>
                 </td>
                 <td class="col-emergency">
-                    <i ng-class="{'icon-ok': requisition.$searchedOffline}"></i>
+                    <i ng-class="{'icon-ok': requisition.$availableOffline}"></i>
                 </td>
             </tr>
             </tbody>
