OLMIS-1477: changed total adjustments text and background color on modal

--- a/src/main/webapp/requisitions/requisition/losses-and-adjustments/losses-and-adjustments-modal.html
+++ b/src/main/webapp/requisitions/requisition/losses-and-adjustments/losses-and-adjustments-modal.html
@@ -43,7 +43,7 @@
     </ul>
 </div>
 
-<div class="adjustment-total clearfix alert is-error" ng-show="vm.adjustments.length > 0">
+<div class="adjustment-total clearfix" ng-show="vm.adjustments.length > 0">
     <span class="pull-left">{{'label.losses.total' | message}}</span>
     <span>{{vm.getTotal()}}</span>
 </div>
